force-app/main/default/objects/FINS_CoverageTeam__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coverage Teams</relationshipLabel>
    <relationshipName>Coverage_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>