force-app/main/default/objects/FINS_CoverageTeam__c/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>Coverage_Team</relationshipName>
    <type>Lookup</type>
</CustomField>